--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <!--! my todo list main tag START  -->
     <form>
         <div class="search">
-            <input type="text" class="todo-input" placeholder="Add...">
+            <input type="text" class="todo-input" placeholder="Add todo ...">
             <button class="todo-button" type="submit">
                 <i class="fas fa-plus-circle"></i>
             </button>
         </div>
 
-        <div class="select">
+        <!-- <div class="select">
             <select name="todos" class="filter-todo">
                 <option value="all">All</option>
                 <option value="completed">Completed</option>
                 <option value="uncompleted">Uncompleted</option>
             </select>
-        </div>
+        </div> -->
     </form>
     <div class="todo-container">
         <ul class="todo-list"></ul>
